--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gradio-base-app"
+name = "face-detection"
 version = "0.1.0"
 description = ""
 authors = ["titus fx <titusfx@gmail.com>"]
@@ -15,5 +15,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gradio = "gradio_base_app.app:main"
-client-gradio = "gradio_base_app.client_app:main"
+gradio = "face_detection.app:main"
+client-gradio = "face_detection.client_app:main"
