--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 gradio = "^4.44.0"
+ultralytics = "^8.2.92"
+opencv-python = "^4.10.0.84"
+dlib = "^19.24.6"
+moviepy = "^1.0.3"
+pandas = "^2.2.2"
 
 
 [build-system]
