--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gradio-base-app"
+name = "scoreboard-padel"
 version = "0.1.0"
 description = ""
 authors = ["titus fx <titusfx@gmail.com>"]
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 gradio = "^4.44.0"
+easyocr = "^1.7.2"
+paddlepaddle = "^2.6.2"
+paddleocr = "^2.8.1"
 
 
 [build-system]
@@ -15,5 +18,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gradio = "gradio_base_app.app:main"
-client-gradio = "gradio_base_app.client_app:main"
+gradio = "scoreboard_padel.app:main"
+client-gradio = "scoreboard_padel.client_app:main"
